samples/_failures_safe/1761215710_d6e65d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d4529a15.c: In function ‘main’:
./samples/SAFE/__tmp_d4529a15.c:182:9: error: expected declaration or statement at end of input
  182 |         printf("Invalid choice\n");
      |         ^~~~~~
./samples/SAFE/__tmp_d4529a15.c:182:9: error: expected declaration or statement at end of input
